[metadata]
name = kvstore
description = distributed key value store
author = Adhy
platforms = unix, linux
classifiers = 
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only

[options]
packages = base_classes, kvstore
install_requires = attrs>=23
python_requires = >=3.6
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
kvstore = py.typed

[flake8]
indent-size = 2